...
            android:layout_marginTop="18dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignRight="@+id/gridView"
            android:layout_alignEnd="@+id/gridView" />

        <TextView
            android:text="My Parking Spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textStyle="normal|bold"
            android:textSize="26sp"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="9dp"
            android:layout_marginStart="9dp"
            android:layout_alignTop="@+id/addSpot"
...
