...
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView android:id="@+id/dates_available_label"
            android:text="Date Range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/search_layout"
            android:layout_marginLeft="30dp"
...
