<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_registration"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_first_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_last_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_first_name"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_last_name"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_email"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_phone_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_confirm_password"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_drivers_license"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/drivers_license"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_phone_number"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="registerUser"
        android:layout_marginBottom="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>