<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageButton android:id="@+id/seeker_button"
        android:src="@drawable/seeker_text"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_seeker"
        android:background="@color/green"
        android:scaleType="fitCenter"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:onClick="setDefaultToSeeker"/>
    <ImageButton android:id="@+id/owner_button"
        android:src="@drawable/owner_text"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_owner"
        android:background="@color/orange"
        android:scaleType="fitCenter"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:onClick="setDefaultToOwner"/>
</LinearLayout>
