<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:text="Size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/sizeTextView"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/handicappedTextView"
            android:layout_alignLeft="@+id/handicappedTextView"
            android:layout_alignStart="@+id/handicappedTextView" />

        <TextView
            android:text="Additional Notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sizeTextView"
            android:layout_alignLeft="@+id/sizeTextView"
            android:layout_alignStart="@+id/sizeTextView"
            android:layout_marginTop="15dp"
            android:id="@+id/notesTextView"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="Parking lot security, lot number, etc."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notesTextView"
            android:layout_alignLeft="@+id/notesTextView"
            android:layout_alignStart="@+id/notesTextView"
            android:id="@+id/notesDes"
            android:textSize="14sp"
            android:textStyle="normal|italic" />

        <TextView
            android:text="Handicapped?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/handicappedTextView"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/addressTextView"
            android:layout_alignLeft="@+id/addressTextView"
            android:layout_alignStart="@+id/addressTextView" />

        <EditText
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/notesEdit"
            android:layout_width="340dp"
            android:layout_height="130dp"
            android:gravity="top|left"
            android:hint="Additional notes here..."
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_below="@+id/notesDes"
            android:layout_alignLeft="@+id/notesDes"
            android:layout_alignStart="@+id/notesDes" />

        <TextView
            android:text="Parking Spot Photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_alignLeft="@+id/addressTextView"
            android:layout_alignStart="@+id/addressTextView"
            android:layout_marginTop="24dp"
            android:id="@+id/textView24"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressTextView"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="17dp"
            android:layout_marginEnd="17dp"
            android:layout_below="@+id/spotPhoto"
            android:layout_toLeftOf="@+id/button"
            android:layout_toStartOf="@+id/button" />

        <fragment android:id="@+id/place_autocomplete_fragment"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressTextView"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />

        <Button
            android:text="done"
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:layout_height="40dp"
            android:onClick="addSpot"
            android:layout_below="@+id/notesEdit"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeSpinner"
            android:layout_above="@+id/notesTextView"
            android:layout_toRightOf="@+id/sizeTextView"
            android:layout_toEndOf="@+id/sizeTextView"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp" />

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/add_photo"
            android:layout_marginTop="20dp"
            android:id="@+id/spotPhoto"
            android:layout_below="@+id/textView24"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_alignBaseline="@+id/handicappedTextView"
            android:layout_alignBottom="@+id/handicappedTextView"
            android:layout_alignRight="@+id/textView24"
            android:layout_alignEnd="@+id/textView24" />

    </RelativeLayout>
</ScrollView>